--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "/public/build"
   ],
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
     "@prisma/client": "^3.11.1",
     "@remix-run/express": "*",
     "@remix-run/node": "*",
@@ -43,9 +47,12 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "daisyui": "^2.13.6",
     "express": "^4.17.3",
+    "framer-motion": "^6.2.10",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
+    "react-daisyui": "^1.7.6",
     "react-dom": "^17.0.2",
     "tiny-invariant": "^1.2.0"
   },
@@ -62,6 +69,7 @@
     "@types/compression": "^1.7.2",
     "@types/eslint": "^8.4.1",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
