--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
   ],
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@prisma/client": "^3.11.1",
-    "@remix-run/express": "*",
-    "@remix-run/node": "*",
-    "@remix-run/react": "*",
-    "@remix-run/server-runtime": "*",
+    "@remix-run/express": "^1.3.4",
+    "@remix-run/node": "^1.3.4",
+    "@remix-run/react": "^1.3.4",
+    "@remix-run/server-runtime": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
@@ -58,8 +59,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.1",
-    "@remix-run/dev": "*",
-    "@remix-run/eslint-config": "*",
+    "@remix-run/dev": "^1.3.4",
+    "@remix-run/eslint-config": "^1.3.4",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/dom": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.3",
