--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.5",
     "daisyui": "^2.13.6",
     "express": "^4.17.3",
     "framer-motion": "^6.2.10",
