removed chakra for daisy

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,23 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 SESSION_SECRET="super-duper-s3cret"
+
+EMAIL_API_KEY="SECR3T_KEY@eagjiej4o3ijfliunv34"
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
+FACTS_KEY=
+FACTS_ID=
+FACTS_SUBSCRIPTION_KEY=
+
+TWILIO_AUTH_TOKEN1=
+TWILIO_ACCOUNT_SID1=
+TWILIO_AUTH_TOKEN=
+TWILIO_ACCOUNT_SID=
+TWILIO_PHONE_NUMBER=
+
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
+GOOGLE_AUTH_CALLBACK_URL="http://localhost:3000/auth/google/callback"
+
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
