--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -206,3 +206,27 @@ jobs:
           args: "deploy --image registry.fly.io/${{ steps.app_name.outputs.value }}:${{ github.ref_name }}-${{ github.sha }}"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
+      - name: "Sending Production SMS Notification"
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: twilio-labs/actions-sms@v1
+        with:
+          fromPhoneNumber: ${{ secrets.TWILIO_NUMBER }}
+          toPhoneNumber: ${{ secrets.TO_NUMBER }}
+          message: "JPG Plays deployed to PRODUCTION!"
+        env:
+          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
+          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY }}
+          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET }}
+
+      - name: "Sending Development SMS Notification"
+        if: ${{ github.ref == 'refs/heads/dev' }}
+        uses: twilio-labs/actions-sms@v1
+        with:
+          fromPhoneNumber: ${{ secrets.TWILIO_NUMBER }}
+          toPhoneNumber: ${{ secrets.TO_NUMBER }}
+          message: "JPG Plays deployed to DEV!"
+        env:
+          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
+          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY }}
+          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET }}
