--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blues-stack-template",
+  "name": "jpg-stack-template",
   "private": true,
   "description": "",
   "license": "",
@@ -16,7 +16,7 @@
     "dev:css": "cross-env NODE_ENV=development npm run generate:css -- --watch",
     "docker": "docker-compose up -d",
     "format": "prettier --write .",
-    "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
+    "generate:css": "tailwindcss -i ./styles/styles.css -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma migrate dev && prisma db seed",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
@@ -35,28 +35,34 @@
     "/public/build"
   ],
   "dependencies": {
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
     "@prisma/client": "^3.11.1",
     "@remix-run/express": "^1.3.4",
     "@remix-run/node": "^1.3.4",
     "@remix-run/react": "^1.3.4",
     "@remix-run/server-runtime": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.29.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.1.5",
     "daisyui": "^2.13.6",
+    "downshift": "^6.1.7",
     "express": "^4.17.3",
     "framer-motion": "^6.2.10",
+    "mailgun.js": "^5.2.2",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-daisyui": "^1.7.6",
     "react-dom": "^17.0.2",
-    "tiny-invariant": "^1.2.0"
+    "remix-auth": "^3.2.1",
+    "remix-auth-email-link": "^1.3.1",
+    "remix-auth-form": "^1.1.1",
+    "remix-auth-google": "^1.1.0",
+    "remix-utils": "^3.0.0",
+    "remix-validated-form": "^4.3.0",
+    "tiny-invariant": "^1.2.0",
+    "twilio": "^3.76.1",
+    "usehooks-ts": "^2.5.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.1",
@@ -71,7 +77,6 @@
     "@types/compression": "^1.7.2",
     "@types/eslint": "^8.4.1",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
