--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write .",
     "generate:css": "tailwindcss -i ./styles/styles.css -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "seed": "prisma db seed",
     "setup": "prisma migrate dev && prisma db seed",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
     "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js",
